Command Finder: Add fuzzy matching and a 'reveal action/command' option